# Operating-Systems-labs-2024

./: .gitignore  README.md  config
1. Процессы, демонизация/: lab1.md
1. Процессы, демонизация/lab1/: CMakeLists.txt  Daemon.cpp  main.cpp
2. Межпроцессное взаимодействие/: lab2.md
Aptukov.Mikhail/lab1/: Makefile  build.sh  main.cpp  monitor.cpp  monitor.hpp  my_daemon  my_daemon.cfg  my_daemon.cpp  my_daemon.hpp
Babakhina.Sofia/lab1/: Config.cpp  Config.h  Config.txt  Daemon.h  build.sh
KromachevMaxim/lab1/: CMakeLists.txt  bash.sh  daemon.cpp  daemon.h  logger.cpp  logger.h  main.cpp  settings.cfg
Lapina/lab1/: CMakeLists.txt  Daemon.cpp  Daemon.h  assembly_and_launch_instructions.md  build.sh  config.conf  configFile.cpp  configFile.h  lab1_DAEMON  main.cpp
LapinaOlga/lab1/: Daemon.cpp  Daemon.h  config.conf  configFile.cpp  main.cpp
Lips.Ekaterina/lab1/: CMakeLists.txt  README.md  build.sh  config.txt  daemon.cpp  daemon.h  daemon_reconfig  daemon_run  daemon_terminate  main.cpp
Markov.Mikhail/lab1/: CMakeLists.txt  build.sh  config.cpp  config.hpp  config.txt  daemon.cpp  daemon.hpp  data.hpp  main.cpp
Shkuropat.Pavel/lab1/: Makefile  build.sh
Shkuropat.Pavel/lab1/src/: daemon.cpp  daemon.hpp  main.cpp  pidfile.cpp  pidfile.hpp  utils.cpp  utils.hpp
Shkuropat.Pavel/lab1/test/: config.txt
Skvortsov.Vladimir/: build.sh  daemon.cpp  daemon.hpp
Skvortsov.Vladimir/lab1/: daemon.cpp  daemon.hpp  main.cpp  run.sh
SofiKorp/: Daemon.cpp  Daemon.h  Makefile  config.txt
SofiKorp/lab 1/: Daemon.cpp  build.sh  config.txt  main.cpp
Solomatov.Aleksandr/Lab1/: .gitignore  build.sh  config.cfg  config.cpp  config.hpp  daemon.cpp  daemon.hpp  main.cpp
Solomatov.Aleksandr_lab1/: CMakeLists.txt  build.sh  config.cpp  config.hpp  config.txt  daemon.cpp  daemon.hpp
Teplov_Andrey 5030102.10201/Teplov_lab2/: Book.hpp  CMakeLists.txt  README.md  build.sh  conn.hpp  conn_fifo.cpp  conn_fifo.hpp  conn_mq.cpp  conn_mq.hpp  conn_sock.cpp  conn_sock.hpp  host_fifo.cpp  host_mq.cpp  host_sock.cpp  logger.hpp  runHostFifo.sh  runHostMq.sh  runHostSock.sh  semaphore.cpp  semaphore.hpp
Teplov_Andrey 5030102.10201/Teplov_lab2/ClientUtils/: ClientWindow.cpp  ClientWindow.hpp  clientProcessing.hpp
Teplov_Andrey 5030102.10201/Teplov_lab2/HostUtils/: HostWindow.cpp  HostWindow.hpp  hostProcessing.hpp
Teplov_Andrey 5030102.10201/lab1 _variant22/: config.txt  daemon.cpp  main.cpp  run.sh
kazakevich.lab1/: ConfigManager.cpp  ConfigManager.h  Daemon.cpp  Daemon.h  Makefile  PidfileManager.cpp  PidfileManager.h  config.txt  daemon_utils.cpp  main.cpp
kazakevich/lab1/: ConfigManager.cpp  ConfigManager.h  Daemon.cpp  Daemon.h  PidfileManager.cpp  PidfileManager.h  build.sh  config.txt  daemon_utils.cpp  daemon_utils.h
lab1/: .gitignore  Makefile  bash.sh  build.sh  cettings.cfg  daemon.cpp  daemon.h  logger.h  monitor.cpp  my_daemon.cfg  my_daemon.cpp  settings.cfg
